--- a/sv.html
+++ b/sv.html
@@ -40,7 +40,7 @@
 
 <tr>
 <td align="center">TUESDAY
-<font color="blue"> SUB1 <br>
+<td align="center"><font color="blue"> SUB1 <br>
 <td align="center">---
 <td align="center"><font color="red"> SUB3 <br>
 <td align="  center"><font color="brown"> SUB2 <br>
@@ -55,7 +55,7 @@
 
 <tr>
 <td align="center">WEDNESDAY
-<font color="blue"> SUB1 <br>
+<td align="center"><font color="blue"> SUB1 <br>
 <td align="center">---
 <td align="center"><font color="red"> SUB3 <br>
 <td align="  center"><font color="brown"> SUB2 <br>
@@ -65,6 +65,55 @@
 </tr>
 
 
+ 
+
+
+<tr>
+<td align="center">THRUSADY
+<td align="center"><font color="blue"> SUB1 <br>
+<td align="center">---
+<td align="center"><font color="red"> SUB3 <br>
+<td align="  center"><font color="brown"> SUB2 <br>
+<td align="center"><font color="red">SUB4<br>
+<td align="center"><font color="red">SUB5<br>
+<td  align="center">DBMS LAB
+</tr>
+
+
+
+
+
+<tr>
+<td align="center">FRIDAY
+<td align="center"><font color="blue"> SUB1 <br>
+<td align="center">---
+<td align="center"><font color="red"> SUB3 <br>
+<td align="  center"><font color="brown"> SUB2 <br>
+<td align="center"><font color="red">SUB4<br>
+<td align="center"><font color="red">SUB5<br>
+<td  align="center">DBMS LAB
+</tr>
+
+
+
+<tr>
+<td align="center">SATURDAY
+<td align="center"><font color="blue"> SUB1 <br>
+<td align="center">---
+<td align="center"><font color="red"> SUB3 <br>
+<td align="center"><font color="brown"> SUB2 <br>
+<td align="center"><font color="red">SUB4<br>
+<td align="center"><font color="red">SUB5<br>
+<td  align="center">DBMS LAB
+</tr>
+
+
+
+<tr>
+<td align="center">SUNDAY
+<Font color="red">
+<td colspan="10" align="center">.....HOLIDAY....
+</tr>
 
 
 
